@@ -1,5 +1,6 @@
 +++ version 2.0-alpha3
 * docking: #2921 done: change tooltip text on Windows (Vogel)
+* hints: #2922 fixed: invalid images on Windows (Vogel)
 
 +++ version 2.0-alpha2
 * windows: #2858 fixed: blinking main window on Kadu exit (Vogel)
